@@ -1,3 +1,6 @@
+=== 2011-08-08 [emboss]
+* Implemented enveloped signature transform.
+
 === 2011-08-06 [emboss]
 * Completed preparation of signature.
 
